Criação do CRUD de Servicos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,24 @@
+server.port=${SERVER_PORT:8080}
+server.servlet.context-path=/booking
+logging.level.root=${LOGGING_LEVEL:INFO}
+logging.level.br.com.fiap=${LOGGING_LEVEL_BR_COM_FIAP:DEBUG}
+
 spring.application.name=FIAP Hackathon Booking
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# H2 console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+server.error.include-message=always
+server.error.include-binding-errors=always
+# curl --location --request GET 'localhost:8080/tenant/1?trace=true'
+server.error.include-stacktrace=on_param
+server.error.include-exception=false
+
+spring.jpa.show-sql=true
