Criação do data.sql para inserir os dados na tabela

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,11 +5,17 @@ logging.level.br.com.fiap=${LOGGING_LEVEL_BR_COM_FIAP:DEBUG}
 
 spring.application.name=FIAP Hackathon Booking
 
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# JPA/Hibernate
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.defer-datasource-initialization=true
 
 # H2 console
 spring.h2.console.enabled=true
@@ -21,4 +27,8 @@ server.error.include-binding-errors=always
 server.error.include-stacktrace=on_param
 server.error.include-exception=false
 
-spring.jpa.show-sql=true
+# Initialize mode (always to always initialize)
+spring.sql.init.mode=always
+
+# Location of data scripts
+spring.sql.init.data-locations=classpath:data.sql
