Enviador de e-mail de confirmação (removi as credentials)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ logging.level.br.com.fiap=${LOGGING_LEVEL_BR_COM_FIAP:DEBUG}
 spring.application.name=FIAP Hackathon Booking
 
 spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+#spring.datasource.url=jdbc:h2:file:~/test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
@@ -32,3 +34,13 @@ spring.sql.init.mode=always
 
 # Location of data scripts
 spring.sql.init.data-locations=classpath:data.sql
+
+# E-mail
+spring.mail.host=email-smtp.us-east-1.amazonaws.com
+spring.mail.username=
+spring.mail.password=
+spring.mail.properties.mail.transport.protocol=smtp
+spring.mail.properties.mail.smtp.port=587
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
